Checkpoint fix disclaimer

--- a/test.ipynb
+++ b/test.ipynb
@@ -23,30 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-10-06 13:51:11.294 INFO: MACE version: 0.2.0\n",
-      "2023-10-06 13:51:11.294 INFO: Configuration: Namespace(E0s='{1:-13.663181292231226, 6:-1029.2809654211628, 7:-1484.1187695035828, 8:-2042.0330099956639}', MLP_irreps='16x0e', amsgrad=True, avg_num_neighbors=1, batch_size=20, charges_key='charges', checkpoints_dir='checkpoints', clip_grad=10.0, compute_avg_num_neighbors=True, compute_forces=True, compute_stress=False, config_type_weights='{\"Default\":1.0}', correlation=3, default_dtype='float32', device='cuda', dipole_key='dipole', dipole_weight=1.0, downloads_dir='downloads', ema=True, ema_decay=0.99, energy_key='energy', energy_weight=1.0, error_table='PerAtomRMSE', eval_interval=2, forces_key='forces', forces_weight=10.0, gate='silu', hidden_irreps='32x0e', interaction='RealAgnosticResidualInteractionBlock', interaction_first='RealAgnosticResidualInteractionBlock', keep_checkpoints=False, log_dir='logs', log_level='INFO', loss='weighted', lr=0.01, lr_factor=0.8, lr_scheduler_gamma=0.9993, max_L=None, max_ell=3, max_num_epochs=2, model='ScaleShiftMACE', model_dir='.', name='MACE_model', num_channels=None, num_cutoff_basis=5, num_interactions=2, num_radial_basis=8, optimizer='adam', patience=2048, r_max=4.0, restart_latest=False, results_dir='results', save_cpu=False, scaling='rms_forces_scaling', scheduler='ReduceLROnPlateau', scheduler_patience=50, seed=123, start_swa=None, stress_key='stress', stress_weight=1.0, swa=True, swa_dipole_weight=1.0, swa_energy_weight=1000.0, swa_forces_weight=1.0, swa_lr=0.001, swa_stress_weight=10.0, swa_virials_weight=10.0, test_file='BOTNet-datasets/dataset_3BPA/test_300K.xyz', train_file='BOTNet-datasets/dataset_3BPA/train_300K.xyz', valid_batch_size=10, valid_file=None, valid_fraction=0.05, virials_key='virials', virials_weight=1.0, wandb=False, wandb_entity='', wandb_log_hypers=['num_channels', 'max_L', 'correlation', 'lr', 'swa_lr', 'weight_decay', 'batch_size', 'max_num_epochs', 'start_swa', 'energy_weight', 'forces_weight'], wandb_name='', wandb_project='', weight_decay=5e-07)\n",
-      "2023-10-06 13:51:11.295 INFO: CUDA version: 11.6, CUDA device: 0\n",
-      "2023-10-06 13:51:11.495 INFO: Loaded 500 training configurations from 'BOTNet-datasets/dataset_3BPA/train_300K.xyz'\n",
-      "2023-10-06 13:51:11.495 INFO: Using random 5.0% of training set for validation\n",
-      "2023-10-06 13:51:12.100 INFO: Loaded 1669 test configurations from 'BOTNet-datasets/dataset_3BPA/test_300K.xyz'\n",
-      "2023-10-06 13:51:12.100 INFO: Total number of configurations: train=475, valid=25, tests=[Default: 1669]\n",
-      "2023-10-06 13:51:12.102 INFO: AtomicNumberTable: (1, 6, 7, 8)\n",
-      "2023-10-06 13:51:12.103 INFO: Atomic Energies not in training file, using command line argument E0s\n",
-      "2023-10-06 13:51:12.103 INFO: Atomic energies: [-13.663181292231226, -1029.2809654211628, -1484.1187695035828, -2042.0330099956639]\n",
-      "2023-10-06 13:53:52.083 INFO: WeightedEnergyForcesLoss(energy_weight=1.000, forces_weight=10.000)\n",
-      "2023-10-06 13:53:52.148 INFO: Average number of neighbors: 11.986634254455566\n",
-      "2023-10-06 13:53:52.148 INFO: Selected the following outputs: {'energy': True, 'forces': True, 'virials': False, 'stress': False, 'dipoles': False}\n",
-      "2023-10-06 13:53:52.148 INFO: Building model\n",
-      "2023-10-06 13:53:52.148 INFO: Hidden irreps: 32x0e\n",
-      "2023-10-06 13:54:45.973 INFO: Using stochastic weight averaging (after 0 epochs) with energy weight : 1000.0, forces weight : 1.0 and learning rate : 0.001\n",
-      "2023-10-06 13:54:46.036 INFO: ScaleShiftMACE(\n",
+      "2023-10-09 04:16:06.009 INFO: MACE version: 0.2.0\n",
+      "2023-10-09 04:16:06.009 INFO: Configuration: Namespace(E0s='{1:-13.663181292231226, 6:-1029.2809654211628, 7:-1484.1187695035828, 8:-2042.0330099956639}', MLP_irreps='16x0e', amsgrad=True, avg_num_neighbors=1, batch_size=20, charges_key='charges', checkpoints_dir='checkpoints', clip_grad=10.0, compute_avg_num_neighbors=True, compute_forces=True, compute_stress=False, config_type_weights='{\"Default\":1.0}', correlation=3, default_dtype='float32', device='cuda', dipole_key='dipole', dipole_weight=1.0, downloads_dir='downloads', ema=True, ema_decay=0.99, energy_key='energy', energy_weight=1.0, error_table='PerAtomRMSE', eval_interval=2, forces_key='forces', forces_weight=10.0, gate='silu', hidden_irreps='32x0e', interaction='RealAgnosticResidualInteractionBlock', interaction_first='RealAgnosticResidualInteractionBlock', keep_checkpoints=False, log_dir='logs', log_level='INFO', loss='weighted', lr=0.01, lr_factor=0.8, lr_scheduler_gamma=0.9993, max_L=None, max_ell=3, max_num_epochs=2, model='ScaleShiftMACE', model_dir='.', name='MACE_model', num_channels=None, num_cutoff_basis=5, num_interactions=2, num_radial_basis=8, optimizer='adam', patience=2048, r_max=4.0, restart_latest=False, results_dir='results', save_cpu=False, scaling='rms_forces_scaling', scheduler='ReduceLROnPlateau', scheduler_patience=50, seed=123, start_swa=None, stress_key='stress', stress_weight=1.0, swa=True, swa_dipole_weight=1.0, swa_energy_weight=1000.0, swa_forces_weight=1.0, swa_lr=0.001, swa_stress_weight=10.0, swa_virials_weight=10.0, test_file='BOTNet-datasets/dataset_3BPA/test_300K.xyz', train_file='BOTNet-datasets/dataset_3BPA/train_300K.xyz', valid_batch_size=10, valid_file=None, valid_fraction=0.05, virials_key='virials', virials_weight=1.0, wandb=False, wandb_entity='', wandb_log_hypers=['num_channels', 'max_L', 'correlation', 'lr', 'swa_lr', 'weight_decay', 'batch_size', 'max_num_epochs', 'start_swa', 'energy_weight', 'forces_weight'], wandb_name='', wandb_project='', weight_decay=5e-07)\n",
+      "2023-10-09 04:16:06.011 INFO: CUDA version: 11.6, CUDA device: 0\n",
+      "2023-10-09 04:16:06.192 INFO: Loaded 500 training configurations from 'BOTNet-datasets/dataset_3BPA/train_300K.xyz'\n",
+      "2023-10-09 04:16:06.193 INFO: Using random 5.0% of training set for validation\n",
+      "2023-10-09 04:16:06.796 INFO: Loaded 1669 test configurations from 'BOTNet-datasets/dataset_3BPA/test_300K.xyz'\n",
+      "2023-10-09 04:16:06.796 INFO: Total number of configurations: train=475, valid=25, tests=[Default: 1669]\n",
+      "2023-10-09 04:16:06.798 INFO: AtomicNumberTable: (1, 6, 7, 8)\n",
+      "2023-10-09 04:16:06.798 INFO: Atomic Energies not in training file, using command line argument E0s\n",
+      "2023-10-09 04:16:06.798 INFO: Atomic energies: [-13.663181292231226, -1029.2809654211628, -1484.1187695035828, -2042.0330099956639]\n",
+      "2023-10-09 04:18:50.238 INFO: WeightedEnergyForcesLoss(energy_weight=1.000, forces_weight=10.000)\n",
+      "2023-10-09 04:18:50.310 INFO: Average number of neighbors: 11.986634254455566\n",
+      "2023-10-09 04:18:50.310 INFO: Selected the following outputs: {'energy': True, 'forces': True, 'virials': False, 'stress': False, 'dipoles': False}\n",
+      "2023-10-09 04:18:50.310 INFO: Building model\n",
+      "2023-10-09 04:18:50.310 INFO: Hidden irreps: 32x0e\n",
+      "2023-10-09 04:19:44.968 INFO: Using stochastic weight averaging (after 0 epochs) with energy weight : 1000.0, forces weight : 1.0 and learning rate : 0.001\n",
+      "2023-10-09 04:19:45.032 INFO: ScaleShiftMACE(\n",
       "  (node_embedding): LinearNodeEmbeddingBlock(\n",
       "    (linear): Linear(4x0e -> 32x0e | 128 weights)\n",
       "  )\n",
@@ -132,8 +132,8 @@
       "  )\n",
       "  (scale_shift): ScaleShiftBlock(scale=0.946350, shift=-4.993647)\n",
       ")\n",
-      "2023-10-06 13:54:46.038 INFO: Number of parameters: 62128\n",
-      "2023-10-06 13:54:46.038 INFO: Optimizer: Adam (\n",
+      "2023-10-09 04:19:45.035 INFO: Number of parameters: 62128\n",
+      "2023-10-09 04:19:45.035 INFO: Optimizer: Adam (\n",
       "Parameter Group 0\n",
       "    amsgrad: True\n",
       "    betas: (0.9, 0.999)\n",
@@ -199,18 +199,18 @@
       "    swa_lr: 0.001\n",
       "    weight_decay: 0.0\n",
       ")\n",
-      "2023-10-06 13:54:46.038 INFO: Using gradient clipping with tolerance=10.000\n",
-      "2023-10-06 13:54:46.038 INFO: Started training\n",
-      "2023-10-06 13:54:46.038 INFO: Changing loss based on SWA\n",
-      "2023-10-06 13:54:58.408 INFO: Epoch 0: loss=1.1759, RMSE_E_per_atom=16.2 meV, RMSE_F=965.2 meV / A\n",
-      "2023-10-06 13:54:59.948 INFO: Training complete\n",
-      "2023-10-06 13:54:59.949 INFO: Computing metrics for training, validation, and test sets\n",
-      "2023-10-06 13:54:59.950 INFO: Loading checkpoint: checkpoints/MACE_model_run-123_epoch-0.pt\n",
-      "2023-10-06 13:54:59.978 INFO: Loaded model from epoch 0\n",
-      "2023-10-06 13:57:39.048 INFO: Evaluating train ...\n",
-      "2023-10-06 13:58:00.564 INFO: Evaluating valid ...\n",
-      "2023-10-06 14:07:07.870 INFO: Evaluating Default ...\n",
-      "2023-10-06 14:07:51.428 INFO: \n",
+      "2023-10-09 04:19:45.035 INFO: Using gradient clipping with tolerance=10.000\n",
+      "2023-10-09 04:19:45.035 INFO: Started training\n",
+      "2023-10-09 04:19:45.035 INFO: Changing loss based on SWA\n",
+      "2023-10-09 04:19:58.009 INFO: Epoch 0: loss=1.1758, RMSE_E_per_atom=16.2 meV, RMSE_F=965.2 meV / A\n",
+      "2023-10-09 04:19:59.523 INFO: Training complete\n",
+      "2023-10-09 04:19:59.523 INFO: Computing metrics for training, validation, and test sets\n",
+      "2023-10-09 04:19:59.524 INFO: Loading checkpoint: checkpoints/MACE_model_run-123_epoch-0.pt\n",
+      "2023-10-09 04:19:59.553 INFO: Loaded model from epoch 0\n",
+      "2023-10-09 04:22:33.547 INFO: Evaluating train ...\n",
+      "2023-10-09 04:22:54.060 INFO: Evaluating valid ...\n",
+      "2023-10-09 04:31:58.781 INFO: Evaluating Default ...\n",
+      "2023-10-09 04:32:43.477 INFO: \n",
       "+-------------+---------------------+------------------+-------------------+\n",
       "| config_type | RMSE E / meV / atom | RMSE F / meV / A | relative F RMSE % |\n",
       "+-------------+---------------------+------------------+-------------------+\n",
@@ -218,19 +218,10 @@
       "|    valid    |         16.2        |      965.2       |       98.75       |\n",
       "|   Default   |         17.3        |      949.4       |       98.83       |\n",
       "+-------------+---------------------+------------------+-------------------+\n",
-      "2023-10-06 14:07:51.431 INFO: Saving model to checkpoints/MACE_model_run-123.model\n",
-      "Traceback (most recent call last):\n",
-      "  File \"./scripts/run_train_.py\", line 559, in <module>\n",
-      "    main()\n",
-      "  File \"./scripts/run_train_.py\", line 518, in main\n",
-      "    epoch = checkpoint_handler.load_latest(\n",
-      "  File \"/home/coder/project/mace/tools/checkpoint.py\", line 205, in load_latest\n",
-      "    result = self.io.load_latest(swa=swa, device=device)\n",
-      "  File \"/home/coder/project/mace/tools/checkpoint.py\", line 166, in load_latest\n",
-      "    path = self._get_latest_checkpoint_path(swa=swa)\n",
-      "  File \"/home/coder/project/mace/tools/checkpoint.py\", line 140, in _get_latest_checkpoint_path\n",
-      "    latest_checkpoint_info = max(\n",
-      "ValueError: max() arg is an empty sequence\n"
+      "2023-10-09 04:32:43.478 INFO: Saving model to checkpoints/MACE_model_run-123.model\n",
+      "2023-10-09 04:32:43.551 INFO: Loaded model from epoch None\n",
+      "2023-10-09 04:35:22.454 INFO: Evaluating train ...\n",
+      "2023-10-09 04:35:42.878 INFO: Evaluating valid ...\n"
      ]
     }
    ],
