Test run complete

--- a/test.ipynb
+++ b/test.ipynb
@@ -221,7 +221,18 @@
       "2023-10-09 04:32:43.478 INFO: Saving model to checkpoints/MACE_model_run-123.model\n",
       "2023-10-09 04:32:43.551 INFO: Loaded model from epoch None\n",
       "2023-10-09 04:35:22.454 INFO: Evaluating train ...\n",
-      "2023-10-09 04:35:42.878 INFO: Evaluating valid ...\n"
+      "2023-10-09 04:35:42.878 INFO: Evaluating valid ...\n",
+      "2023-10-09 04:45:06.378 INFO: Evaluating Default ...\n",
+      "2023-10-09 04:45:49.995 INFO: \n",
+      "+-------------+---------------------+------------------+-------------------+\n",
+      "| config_type | RMSE E / meV / atom | RMSE F / meV / A | relative F RMSE % |\n",
+      "+-------------+---------------------+------------------+-------------------+\n",
+      "|    train    |         17.7        |      935.5       |       98.85       |\n",
+      "|    valid    |         16.2        |      965.2       |       98.75       |\n",
+      "|   Default   |         17.3        |      949.4       |       98.83       |\n",
+      "+-------------+---------------------+------------------+-------------------+\n",
+      "2023-10-09 04:45:49.997 INFO: Saving model to checkpoints/MACE_model_run-123_swa.model\n",
+      "2023-10-09 04:45:50.055 INFO: Done\n"
      ]
     }
    ],
