--- a/test.ipynb
+++ b/test.ipynb
@@ -301,6 +301,77 @@
    "source": [
     "sld.value"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This example shows how you can add upload table with complex objects inside to datacatalog\n",
+    "\"\"\"\n",
+    "# from random import randbytes\n",
+    "from random import randint\n",
+    "\n",
+    "from pymatgen.core import Lattice, Structure\n",
+    "\n",
+    "from rolos_sdk import Dataframe, DataStorageInterface, DataStorageType, RawObject, TableColumn\n",
+    "from rolos_sdk.structures.object.pymatgen import PyMatGenObject\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "First of all you need to declare table schema, sometimes the schema may be guessed from data via\n",
+    "Dataframe.create_schema_from_data() static method. But it is not recommended because detection of\n",
+    "non-POD types are not magically work and may fail to wide objects like RawObject.\n",
+    "\n",
+    "So, table schema is the list of TableColumn. Every TableColumn defines column name and column type,\n",
+    "the type set as python type for POD values and wrappers for objects, because if there are no wrappers\n",
+    "we can not detect proper type to store objects.\n",
+    "\"\"\"\n",
+    "table_schema = [\n",
+    "    TableColumn(name=\"Index\", type=int),\n",
+    "    TableColumn(name=\"Structure\", type=PyMatGenObject),\n",
+    "    TableColumn(name=\"Raw experiment data\", type=int),#RawObject),\n",
+    "]\n",
+    "\n",
+    "table_data = list()\n",
+    "\n",
+    "# Create sample table with random values\n",
+    "for index in range(100):\n",
+    "    # raw = randbytes(1024)\n",
+    "    raw = randint(0,1024)\n",
+    "    structure = Structure(\n",
+    "        Lattice.orthorhombic(1, 2, 3), [\"Ag\", \"Si\", \"Si\"], [[0.7, 0.4, 0.5], [0, 0, 0.1], [0, 0, 0.2]]\n",
+    "    )\n",
+    "    table_data.append([index, structure, raw])\n",
+    "\n",
+    "with DataStorageInterface.create(DataStorageType.Datacat) as storage:\n",
+    "    # Storage should be available and valid for all Dataframe lifetime\n",
+    "    with Dataframe(name=\"Test frame with big table\", schema=table_schema, storage=storage) as frame:\n",
+    "        frame.insert(table_data)\n",
+    "        # Dataframe will commit itself after successful __exit__ from context manager\n",
+    "\n",
+    "# That's all.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.r"
+   ]
   }
  ],
  "metadata": {
