--- a/test.ipynb
+++ b/test.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +318,10 @@
     "\n",
     "from rolos_sdk import Dataframe, DataStorageInterface, DataStorageType, RawObject, TableColumn\n",
     "from rolos_sdk.structures.object.pymatgen import PyMatGenObject\n",
+    "\n",
+    "def randbytes(size: int) -> bytes:\n",
+    "    return bytearray(random.getrandbits(8) for _ in range(size))\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
