matscipy 1st test

--- a/TestXMace.ipynb
+++ b/TestXMace.ipynb
@@ -109,25 +109,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matscipytest'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/coder/project/TestXMace.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://research.constructor.tech/home/coder/project/TestXMace.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# import matscipy/tests as t\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://research.constructor.tech/home/coder/project/TestXMace.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatscipytest\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matscipytest'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/usr/local/lib/python3.8/dist-packages/tests']\n",
+      "['/home/coder/project/matscipy_tests']\n"
      ]
     }
    ],
    "source": [
-    "# import matscipy/tests as t\n",
-    "import matscipytest\n",
-    "\n"
+    "# NB: if the project consists of folder 'tests' then it is not accessible \n",
+    "# since there is another folder 'tests' in '/usr/local/lib/python3.8/dist-packages'\n",
+    "# and this folder PRECIDES user's folder '/home/coder/project/tests' in the envirinment variable $PATH \n",
+    "# so the user is forced to rename itsown folder 'tests'\n",
+    "import tests\n",
+    "import matscipy_tests\n",
+    "print(tests.__path__)\n",
+    "print(matscipy_tests.__path__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import sys\n",
+    "# sys.path.insert(0, './tests_')\n",
+    "# from matscipy.neighbours import neighbour_list\n",
+    "# from tests_ import matscipytest\n",
+    "# from tests_ import test_angle_distribution as t\n",
+    "\n",
+    "!python3 matscipy_tests/test_angle_distribution.py"
    ]
   },
   {
