test LAMMPS completed

--- a/TestXMace.ipynb
+++ b/TestXMace.ipynb
@@ -134,6 +134,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/usr/local/lib/python3.8/dist-packages/matscipy']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matscipy\n",
+    "matscipy.__path__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -2199,9 +2220,9 @@
     "5) matscipy.gamma_surface  is absent but is present in the GIT https://github.com/libAtoms/matscipy/blob/master/matscipy/gamma_surface.py\n",
     "6) matscipy.numerical is not equal to https://github.com/libAtoms/matscipy/blob/master/matscipy/numerical.py\n",
     "in the matscipy GIT, in particular function numerical_hessian has different keyword argument (dx instaedof d)\n",
-    "7) ........................\n",
+    "7) Other errors can be found in the log of the previous cell.\n",
     "\n",
-    "Conclusion% The MATSCIPY version is not recent as requested in ther task\n",
+    "Conclusion: The MATSCIPY version is not recent as requested in ther task, so MTSCIPY is not properly installed.\n",
     "'''"
    ]
   },
@@ -2221,9 +2242,135 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import matscipy\n",
-    "matscipy.__path__"
+    "3. Testing LAMMPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation started with process ID 31822\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "31822"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from lammps_simulator import sim\n",
+    "# sim.set_input_script(\"lammps_test.in\")\n",
+    "# sim.run(num_procs=4, lmp_exec=\"lmp\")\n",
+    "sim.set_input_script(\"hello.in\")\n",
+    "sim.run(num_procs=4, lmp_exec=\"lmp\")\n",
+    "\n",
+    "# from lammps_simulator.device import GPU\n",
+    "# device = CPU(num_procs=4, lmp_exec=\"lmp\")\n",
+    "# sim.run(device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: LAMMPS\n"
+     ]
+    }
+   ],
+   "source": [
+    "!LAMMPS executable < hello.in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------\n",
+      "mpirun was unable to find the specified executable file, and therefore\n",
+      "did not launch the job.  This error was first reported for process\n",
+      "rank 0; it may have occurred for other processes as well.\n",
+      "\n",
+      "NOTE: A common cause for this error is misspelling a mpirun command\n",
+      "      line parameter option (remember that mpirun interprets the first\n",
+      "      unrecognized command line token as the executable).\n",
+      "\n",
+      "Node:       production-env-5ae8671c991a4bd9901cc96afbde63de\n",
+      "Executable: LAMMPS\n",
+      "--------------------------------------------------------------------------\n",
+      "8 total processes failed to start\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mpirun -np 8 LAMMPS executable < hello.in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mpirun: /opt/nvidia/hpc_sdk/Linux_x86_64/23.11/comm_libs/hpcx/bin/mpirun\n"
+     ]
+    }
+   ],
+   "source": [
+    "!whereis mpirun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LAMMPS:\n"
+     ]
+    }
+   ],
+   "source": [
+    "!whereis LAMMPS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: LAMMPS seems to be not installed at all"
    ]
   }
  ],
